--- a/index.html
+++ b/index.html
@@ -24,24 +24,34 @@
         <form>
           <div class="tab">
             <P>CARDHOLDER NAME</P>
-            <input type="text" name="name" placeholder="e.g. Jane Appleseed">
+            <input type="text" id="name" placeholder="e.g. Jane Appleseed" name="name">
+          <div class="error-one"></div>
           </div>
           <div class="tab">
             <P>CARD NUMBER</P>
-            <input type="text" name="number" placeholder="e.g. 1234 5678 9123 0000">
+            <input type="text" id="number" placeholder="e.g. 1234 5678 9123 0000" name="number">
+          <div class="error-two" id="error"></div>
           </div>
           <div class="tab">
               <p class="tab2">EXP. DATE (MM/YY) <span>CVC</span></p>
               <div class="divide">
-              <input type="text" name="month" placeholder="MM">
-              <input type="text" name="year" placeholder="YY">
-              <input type="text" name="cvc" placeholder="e.g. 123">
-            </div>
+               <div class="tab3">
+                <input type="text"  id="month" placeholder="MM" name="month">
+              <div class="error-three" id="error"></div>
+              </div>
+              <div class="tab3">
+               <input type="text" id="year" placeholder="YY" name="year">
+               <div class="error-four"></div>
+              </div>
+              <div class="tab3">
+                <input type="text" id="cvc" placeholder="e.g. 123" name="cvc">
+                <div class="error-five" id="error"></div>
+              </div>
+              </div>
           </div>
-          <button class="subm">Confirm</button>
-          
+          <input type="submit" class="subm" id="button" value="Confirm">
         </form>
-   <section>
+   <section class="thanks-card">
     <img src="images/icon-complete.svg" alt="" class="done">
     <div class="thanks">THANK YOU!</div>
     <P>We've added your card details</P>
